--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
+    "geoip-lite": "^1.4.6",
     "netlify-lambda": "^1.4.3",
     "serverless-http": "^1.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
-    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
+    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src",
+    "start:dev": "nodemon src/start.js"
   },
   "keywords": [],
   "author": "",
